src/docs/asciidoc/v2/getting-started.adoc
ifndef::springdoc-aggregate[]
= Getting Started with springdoc-openapi (v2)
:toc: left
:toclevels: 3
:sectanchors:
:icons: font
:hide-uri-scheme:
:docinfodir: v2

IMPORTANT: You are reading the documentation for *springdoc-openapi v2* (Spring Boot 3.x). See the https://springdoc.org[current springdoc-openapi documentation] for the latest release.
endif::[]

[[getting-started]]
== Getting Started

For the integration between spring-boot and swagger-ui, add the library to the list of your project dependencies (No additional configuration is needed)

[source,xml, subs="attributes+"]
----
   <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>{springdoc-version2}</version>
   </dependency>
----


This will automatically deploy swagger-ui to a spring-boot application:

*   Documentation will be available in HTML format, using the official link:https://github.com/swagger-api/swagger-ui.git[swagger-ui jars, window="_blank"]
*   The Swagger UI page will then be available at `\http://server:port/context-path/swagger-ui.html` and the OpenAPI description will be available at the following url for json format: `\http://server:port/context-path/v3/api-docs`
**  server: The server name or IP
**  port: The server port
**  context-path: The context path of the application
*   Documentation will be available in yaml format as well, on the following path : /v3/api-docs.yaml

TIP: For custom path of the swagger documentation in HTML format, add a custom springdoc property, in your spring-boot configuration file.


[source,properties]
----
# swagger-ui custom path
springdoc.swagger-ui.path=/swagger-ui.html
----

++++
<ins class="adsbygoogle"
     style="display:block; text-align:center; min-height:280px;"
     data-ad-layout="in-article"
     data-ad-format="fluid"
     data-ad-client="ca-pub-8127371937306964"
     data-ad-slot="6163211104"></ins>
<script>
     (adsbygoogle = window.adsbygoogle || []).push({});
</script>
++++